fix: dark mode notice

--- a/assets/scss/betterlinks.scss
+++ b/assets/scss/betterlinks.scss
@@ -41,9 +41,7 @@ body {
 		.betterlinks-body {
 			@import './control/plugin-mode';
 		}
-		.betterlinks-pro-notice.notice,
-		.notice.betterlinks,
-		.btl-notes.notice {
+		.notice {
 			background-color: #2c3650;
 			color: $white;
 		}
